# doot-examples

./: .gitignore  .pre-commit-config.yaml  doot.toml  pyproject.toml  readme.md  todo.md
.tasks/: android.toml  backup.toml  bibtex.toml  bookmark.toml  globs.toml  godot.toml  interactive.toml  mast.toml  mastodon.toml  order.toml  shadow.toml  simple_import.toml  tags.toml  walker.toml
1.simple/: doot.toml  expected.trace  simple.toml
11.stubs/: doot.toml  expected.trace
12.env_vars/: expected.trace
12.precommit/: doot.toml
13.postbox/: doot.toml  expected.trace
14.command.aliases/: doot.toml  expected.trace
15.random.seed/: doot.toml  expected.trace
15.random.seed.jobs/: doot.toml  expected.trace  local.py
16.job.matching/: doot.toml
2.dependencies/: doot.toml  file.dep.tsk.toml  is-there.txt  task.dep.tsk.toml
2.dependencies.data.injection/: doot.toml
2.dependencies.file/: doot.toml  expected.trace  file.dep.tsk.toml
2.dependencies.indirect/: doot.toml  expected.trace
2.dependencies.injection/: doot.toml  expected.trace
2.dependencies.task/: doot.toml  expected.trace  task.dep.tsk.toml
3.predicates/: doot.toml  expected.trace
4.state/: doot.toml  expected.trace
5.cli.args/: doot.toml  expected.trace
6.jobs/: doot.toml  expected.trace
6.jobs.expansion/: doot.toml  expected.trace
6.jobs.limiting/: doot.toml  expected.trace
6.jobs.matching/: doot.toml  expected.trace
7.injection/: doot.toml
8.custom.action/: doot.toml  expected.trace  local_code.py
8.custom.task/: doot.toml  expected.trace  local_code.py
stubs/: mas.toml  (+19 more)
(+3 files in other folders)
