[project]
name            = "doot-examples"
version         = "0.1.0"
description     = "Add your description here"
readme          = "readme.md"
requires-python = ">=3.12"

dependencies    = [
    "bibtex-bibble",
    "doot",
    "dootle",
]

[tool.uv.sources]
bibtex-bibble = { path = "../bibble", editable = true }

